Add missed .sty and .cls files

--- a/Tomasz_Kostur_cv_pl.tex
+++ b/Tomasz_Kostur_cv_pl.tex
@@ -53,7 +53,7 @@
 %\phone{}
 %\fax{(000) 111 1113}
 \email{tomasz.kostur@gmail.com}
-%\homepage{staff.org.edu/~jsmith}{staff.org.edu/$\sim$jsmith} % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
+\homepage{https://github.com/tomaszKostur}{https://github.com/tomaszKostur} % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
 %\extrainfo{additional information}
 \photo[110pt][0.4pt]{pictures/ja.jpg} % The first bracket is the picture height, the second is the thickness of the frame around the picture (0pt for no frame)
 %\quote{"A witty and playful quotation" - John Smith}
