--- a/Tomasz_Kostur_cv_en.tex
+++ b/Tomasz_Kostur_cv_en.tex
@@ -70,22 +70,22 @@
 
 \section{Skills}
 
-\cvitem{\textbf{Pyhton}:} {
+\cvitem{\textbf{Python}:} {
     \begin{itemize}
-    \item Good general knowelegde of language.
+    \item Good general knowledge of language.
     \item \textbf{pytest}: writing tests, fixtures, customization of test cases collection process, parametrization.
     \item \textbf{pdb/pudb}: effective using interfaces of debugger and skillfull using all of its tools.
     \item \textbf{Kivy}: making applications with dynamic added widgets, using standard loop of events.
-    \item \textbf{Django}: basic knowelegde of making applications and assumptions of the framework.
-    \item \textbf{Sphinx}: general knowelegde about rules for making comments compatible with the documentation generator, generating documentation using pre-defined styles.
+    \item \textbf{Django}: basic knowledge of making applications and assumptions of the framework.
+    \item \textbf{Sphinx}: general knowledge about rules for making comments compatible with the documentation generator, generating documentation using pre-defined styles.
     \end{itemize}
 }
 \cvitem{\textbf{C++}:} {
     \begin{itemize}
     \item familiarity with \textbf{STL}.
     \item basic techniques of \textbf{multi thread} programming, using C++11 standard library.
-    \item basic knowelegde of \textbf{OpenCV} library.
-    \item basic knowelegde of \textbf{gtest} framework.
+    \item basic knowledge of \textbf{OpenCV} library.
+    \item basic knowledge of \textbf{gtest} framework.
     \end{itemize}
 }
 \cvitem{\textbf{C}:} {\begin{itemize}
@@ -106,7 +106,7 @@
     \end{itemize}
 }
 
-\cvitem{}{Good knowelegde about GNU/Linux OS.}
+\cvitem{}{Good knowledge about GNU/Linux OS.}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
@@ -140,7 +140,7 @@
 
 \subsection{Let's Settle}
 
-\cvitem{\textbf{Opis}}{GUI application for Android OS. Calculator for turistic trips costs, shared between excirsion members. Written in Python using Kivy framework.}
+\cvitem{\textbf{Description}}{GUI application for Android OS. Calculator for turistic trips costs, shared between excirsion members. Written in Python using Kivy framework.}
 
 \subsection{Master Degree}
 
