en typo revision 2

--- a/Tomasz_Kostur_cv_en.tex
+++ b/Tomasz_Kostur_cv_en.tex
@@ -74,7 +74,7 @@
     \begin{itemize}
     \item Good general knowledge of language.
     \item \textbf{pytest}: writing tests, fixtures, customization of test cases collection process, parametrization.
-    \item \textbf{pdb/pudb}: effective using interfaces of debugger and skillfull using all of its tools.
+    \item \textbf{pdb/pudb}: effective using interfaces of debugger and skillful using all of its tools.
     \item \textbf{Kivy}: making applications with dynamic added widgets, using standard loop of events.
     \item \textbf{Django}: basic knowledge of making applications and assumptions of the framework.
     \item \textbf{Sphinx}: general knowledge about rules for making comments compatible with the documentation generator, generating documentation using pre-defined styles.
@@ -92,17 +92,17 @@
 \item Creating and compiling programs for AVR microcontrollers using \textbf{avrlibc}.
 \end{itemize}}
 
-\cvitem{Pozostałe:} {
+\cvitem{Others:} {
     \begin{itemize}
     \item \textbf{SQL} using MariaDB.
     \item \LaTeX.
     \item \textbf{Bash}
     \item Basics of \textbf{html/css}.
-    \item \textbf{Docker} making and using indyvidual containers.
+    \item \textbf{Docker} making and using individual containers.
     \item Making virtual machines using \textbf{libvirt} paired with \textbf{Qemu}.
     \item Compilation using \textbf{GCC} and \textbf{GNU Make}.
     \item Favorite editors: \textbf{Vim}, \textbf{Atom}.
-    \item \textbf{Golang}, first steps in lagnuage.
+    \item \textbf{Golang}, first steps in language.
     \end{itemize}
 }
 
@@ -122,7 +122,7 @@
     \begin{itemize}
     \item Making automate software tests, using Python and C++.
     \item Monitoring of tests results.
-    \item Maitaining proprietary test schedule framework, written in Python.
+    \item Maintaining proprietary test schedule framework, written in Python.
     \item Debugging code and shipping bug-reproduction scripts.
     \end{itemize}
 }
@@ -140,7 +140,7 @@
 
 \subsection{Let's Settle}
 
-\cvitem{\textbf{Description}}{GUI application for Android OS. Calculator for turistic trips costs, shared between excirsion members. Written in Python using Kivy framework.}
+\cvitem{\textbf{Description}}{GUI application for Android OS. Calculator for holiday trips costs, shared between excursion members. Written in Python using Kivy framework.}
 
 \subsection{Master Degree}
 
@@ -152,7 +152,7 @@
 \subsection{Bachelors Degree}
 
 \cvitem{\textbf{Title}}{\emph{Implementation of electronics commutator of model BLDC motor.}}
-\cvitem{\textbf{Description}}{Project contains practical solution of electronic commutation problem in direct current brushless motors, widely used in aerospace models and drones. The comutator is made using AVR microcontroller, it's software is made in \textit{C} using \textit{avrlibc}}
+\cvitem{\textbf{Description}}{Project contains practical solution of electronic commutation problem in direct current brushless motors, widely used in aerospace models and drones. The commutator is made using AVR micro-controller, it's software is made in \textit{C} using \textit{avrlibc}}
 
 \subsection{Optical recognition project}
 
