--- a/Tomasz_Kostur_cv_en.tex
+++ b/Tomasz_Kostur_cv_en.tex
@@ -48,14 +48,14 @@
 
 % All information in this block is optional, comment out any lines you don't need
 \title{Curriculum Vitae}
-\address{ul. Nadgoplańska 16B}{88-150 Kruszwica, Polska}
+\address{ul. Aleksandry Gabrysiak 48/3}{80-175 Gdańsk, Polska}
 \mobile{+48 669 735 664}
 %\phone{}
 %\fax{(000) 111 1113}
 \email{tomasz.kostur@gmail.com}
 \homepage{https://github.com/tomaszKostur}{https://github.com/tomaszKostur} % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
 %\extrainfo{additional information}
-\photo[110pt][0.4pt]{pictures/ja.jpg} % The first bracket is the picture height, the second is the thickness of the frame around the picture (0pt for no frame)
+%\photo[110pt][0.4pt]{pictures/ja.jpg} % The first bracket is the picture height, the second is the thickness of the frame around the picture (0pt for no frame)
 %\quote{"A witty and playful quotation" - John Smith}
 
 %----------------------------------------------------------------------------------------
@@ -63,6 +63,36 @@
 \begin{document}
 
 \makecvtitle % Print the CV title
+
+
+%----------------------------------------------------------------------------------------
+%	WORK EXPERIENCE SECTION
+%----------------------------------------------------------------------------------------
+
+\section{Work experience}
+
+\cventry{2018--*}{Software developer}{Falcon V Systems}{}{}{}
+\cvitem{Expertises}{
+    \begin{itemize}
+    \item Developing micro-services solution, powered by Docker/Kubernetes.
+    \item Developing advanced test-framework. Implemetnation of System Under Test methodology as a collection of micro-services.
+    \item Working with many Cable-Labs documents describing network protocols (GCP, L2TPv3, DOCSIS)
+    \end{itemize}
+}
+
+\cventry{2015--2018}{Software engineer}{Intel Technology Poland}{}{}{Teams: \begin{itemize}
+    \item  \textit{High performance computing} (2015-2017)
+    \item \textit{Data center group} (2017-2018)
+\end{itemize} }
+\cvitem{Expertises}{
+    \begin{itemize}
+    \item Making automate software tests, using Python and C++.
+    \item Monitoring of tests results.
+    \item Maintaining proprietary test schedule framework, written in Python.
+    \item Debugging code and shipping bug-reproduction scripts.
+    \item Applying CVE fixes for product-specific linux kernel.
+    \end{itemize}
+}
 
 %----------------------------------------------------------------------------------------
 %	COMPUTER SKILLS SECTION
@@ -72,19 +102,67 @@
 
 \cvitem{\textbf{Python}:} {
     \begin{itemize}
-    \item Good general knowledge of language.
-    \item \textbf{pytest}: writing tests, fixtures, customization of test cases collection process, parametrization.
-    \item \textbf{pdb/pudb}: effective using interfaces of debugger and skillful using all of its tools.
-    \item \textbf{Kivy}: making applications with dynamic added widgets, using standard loop of events.
-    \item \textbf{Django}: basic knowledge of making applications and assumptions of the framework.
-    \item \textbf{Sphinx}: general knowledge about rules for making comments compatible with the documentation generator, generating documentation using pre-defined styles.
+    \item \textbf{asyncio} : Creating concurrent code.
+    \item \textbf{multiprocessing}: Ability to use multiprocessing from python standard library. Creating paralellism in remote workers, or remote server manner.
+    \item \textbf{fast-api}: Ability to create rest API with swagger documentation and validation.
+    \item \textbf{scapy}: Basic knowledge of creation and usage of OSI model layers.
+    \item \textbf{pytest}: Advanced knowledge about writing tests, fixtures, customization of test cases collection process, parametrization.
+    \item \textbf{pdb/pudb}: Effective using interfaces of debugger and skillful using all of its tools.
+    \item \textbf{Sphinx}: General knowledge about rules for making comments compatible with the documentation generator, generating documentation using pre-defined styles.
+    \item \textbf{Django}: Basic knowledge of making applications and assumptions of the framework.
+    \item \textbf{Kivy}: Making applications with dynamic added widgets, using standard loop of events.
     \end{itemize}
 }
-\cvitem{\textbf{C++}:} {
+
+\cvitem{\textbf{Rust}:} {
     \begin{itemize}
-    \item familiarity with \textbf{STL}.
-    \item basic techniques of \textbf{multi thread} programming, using C++11 standard library.
-    \item basic knowledge of \textbf{OpenCV} library.
+        \item \textbf{Tokio}: Basic knowledge of creating async code and some knowlegde of related libraries like \textbf{Hyper}, \textbf{Warp}, \textbf{Reqwest}.
+        \item \textbf{sha2}, \textbf{hmac}, \textbf{cucumber}, \textbf{serde}, \textbf{indexmap}, \textbf{piston}: Basic knowledge
+        %\item \textbf{Rocket}: Knowlegde of basic concepts of framework.
+    \end{itemize}
+}
+
+\cvitem{\textbf{Go}:} {
+    \begin{itemize}
+        \item \textbf{Gin}: Http server library. Basic knowlegde.
+    \end{itemize}
+}
+
+
+
+\cvitem{\textbf{Frameworks/Technologies}:} {
+    \begin{itemize}
+    \item \textbf{Docker} Creating and using docker containers as developer environment and release product, working with docker custom networks, spawning docker containers from another container, using docker compose, as test environment, basic knowlegde about "docker swarm".
+    \item \textbf{Kubernetes}
+    \item \textbf{RabbitMQ}
+    \item \textbf{InfluxDB}
+    \item \textbf{Grafana}
+    \item \textbf{Jenkins}
+    \item \textbf{SQL} by MariaDB.
+    \item \LaTeX.
+    \item \textbf{Bash}
+    \item Basics of \textbf{html/css}.
+    \item Making virtual machines using \textbf{libvirt} paired with \textbf{Qemu}.
+    \end{itemize}
+}
+
+\cvitem{\textbf{Linux}:}{
+    Knowledge about GNU/Linux OS.
+    \begin{itemize}
+        \item Using GNU/Linux as a base personal environment.
+        \item Managing services by systemd.
+        \item Compiling and using custom linux kernel.
+        \item Configuring GRUB.
+    \end{itemize}
+}
+
+\cvitem{\textbf{C++}:} {
+    Basic language skills.
+    \begin{itemize}
+    %\item familiarity with \textbf{STL}, 
+    \item some knowledge about latest features of \textbf{C++}, "concepts", and "modules".
+    \item basic techniques of \textbf{multi thread} programming, using standard library.
+    %\item basic knowledge of \textbf{OpenCV} library.
     \item basic knowledge of \textbf{gtest} framework.
     \end{itemize}
 }
@@ -92,40 +170,9 @@
 \item Creating and compiling programs for AVR microcontrollers using \textbf{avrlibc}.
 \end{itemize}}
 
-\cvitem{Others:} {
-    \begin{itemize}
-    \item \textbf{SQL} using MariaDB.
-    \item \LaTeX.
-    \item \textbf{Bash}
-    \item Basics of \textbf{html/css}.
-    \item \textbf{Docker} making and using individual containers.
-    \item Making virtual machines using \textbf{libvirt} paired with \textbf{Qemu}.
-    \item Compilation using \textbf{GCC} and \textbf{GNU Make}.
-    \item Favorite editors: \textbf{Vim}, \textbf{Atom}.
-    \item \textbf{Golang}, first steps in language.
-    \end{itemize}
-}
 
-\cvitem{}{Good knowledge about GNU/Linux OS.}
 
-%----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE SECTION
-%----------------------------------------------------------------------------------------
 
-\section{Work experience}
-
-\cventry{2015--*}{Software engineer}{Intel Technology Poland}{}{}{Teams: \begin{itemize}
-    \item  \textit{High performance computing} (2015-2017)
-    \item \textit{Data center group} (2017-*)
-\end{itemize} }
-\cvitem{Expertises}{
-    \begin{itemize}
-    \item Making automate software tests, using Python and C++.
-    \item Monitoring of tests results.
-    \item Maintaining proprietary test schedule framework, written in Python.
-    \item Debugging code and shipping bug-reproduction scripts.
-    \end{itemize}
-}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
@@ -134,37 +181,29 @@
 
 \cventry{2014--2015}{Master Degree: Control engineering and Robotics}{Poznań University of technology, Faculty of Electrical Engineering}{\textit{full time}}{}{Specialization: Robotics}  % Arguments not required can be left empty
 \cventry{2011--2014}{Bachelors Degree: Control engineering and Robotics}{Poznań University of technology, Faculty of Electrical Engineering}{\textit{full time}}{}{Specialization: Robotics}
-%\cventry{2010--2011}{Summer Intern}{}{}{}{}
 
-\section{Projects}
-
-\subsection{Let's Settle}
-
-\cvitem{\textbf{Description}}{GUI application for Android OS. Calculator for holiday trips costs, shared between excursion members. Written in Python using Kivy framework.}
-
-\subsection{Master Degree}
-
-\cvitem{\textbf{Title}}{\emph{Implementation of calculating accelerator, supervised by Linux embedded}}
-\cvitem{\textbf{Description}}{Project contains implementation of hardware device for
-    acceleration of stereo-vision algorithm, made on Xillinx Zynq 7000 platform.
-        Zynq 7000 is a platform containing ARM based processor and programmable logic at one integrated circuit area.}
-
-\subsection{Bachelors Degree}
-
-\cvitem{\textbf{Title}}{\emph{Implementation of electronics commutator of model BLDC motor.}}
-\cvitem{\textbf{Description}}{Project contains practical solution of electronic commutation problem in direct current brushless motors, widely used in aerospace models and drones. The commutator is made using AVR micro-controller, it's software is made in \textit{C} using \textit{avrlibc}}
-
-\subsection{Optical recognition project}
-
-\cvitem{\textbf{Description}}{Recognition of vehicle registration plates number from photography. Written in C++ using OpenCV library.}
+%\section{Projects}
+%
+%\subsection{Master Degree}
+%
+%\cvitem{\textbf{Title}}{\emph{Implementation of calculating accelerator, supervised by Linux embedded}}
+%\cvitem{\textbf{Description}}{Project contains implementation of hardware device for
+%    acceleration of stereo-vision algorithm, made on Xillinx Zynq 7000 platform.
+%        Zynq 7000 is a platform containing ARM based processor and programmable logic at one integrated circuit area.}
+%
+%\subsection{Bachelors Degree}
+%
+%\cvitem{\textbf{Title}}{\emph{Implementation of electronics commutator of model BLDC motor.}}
+%\cvitem{\textbf{Description}}{Project contains practical solution of electronic commutation problem in direct current brushless motors, widely used in aerospace models and drones. The commutator is made using AVR micro-controller, it's software is made in \textit{C} using \textit{avrlibc}}
 
 %----------------------------------------------------------------------------------------
 %	COMMUNICATION SKILLS SECTION
 %----------------------------------------------------------------------------------------
 
-\section{Additional skills}
+%\section{Additional skills}
 
-\cvitem{}{Car and motorcycle driving license}
+%\cvitem{}{Car and motorcycle driving license}
+
 %\cvitem{2009}{Poster at the Annual Business Conference in Oregon}
 
 %----------------------------------------------------------------------------------------
@@ -174,7 +213,7 @@
 \section{Languages}
 
 \cvitemwithcomment{Polish}{Mother language}{}
-\cvitemwithcomment{English}{Intermediate}{Good command and reading technical manuals}
+\cvitemwithcomment{English}{Intermediate}{}
 %\cvitemwithcomment{Dutch}{Basic}{Basic words and phrases only}
 
 %----------------------------------------------------------------------------------------
@@ -185,12 +224,12 @@
 
 \renewcommand{\listitemsymbol}{-~} % Changes the symbol used for lists
 
-\cvlistdoubleitem{Film music}{Analog electronics}
-\cvlistdoubleitem{Rock climbing}{Mountaineering}
+\cvlistdoubleitem{Film music (sometimes as a composer)}{Analog electronics}
+\cvlistdoubleitem{Rock climbing}{BJJ}
 
-\section{Non professional achievments}
-\cvitem{}{Co-autor, music composer for feature-length documentary movie "Get away to Pitcairn". The movie premiere was 15 march 2015, on "Kolosy" festival in Gdynia.}
-\cvitem{}{Co-autor, music composer for short-length documentary movie "Bedtime stories". The movie premiere in 2016, on "Papaya Films" festival in Bydgoszcz.}
+%\section{Non professional achievments}
+%\cvitem{}{Co-autor, music composer for feature-length documentary movie "Get away to Pitcairn". The movie premiere was 15 march 2015, on "Kolosy" festival in Gdynia.}
+%\cvitem{}{Co-autor, music composer for short-length documentary movie "Bedtime stories". The movie premiere in 2016, on "Papaya Films" festival in Bydgoszcz.}
 
 \footnotesize{
   \vfill
